--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@alyle/ui": "^2.9.0",
     "@angular/animations": "^8.0.3",
     "@angular/cdk": "^8.0.2",
     "@angular/common": "~8.0.1",
@@ -25,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "bootstrap": "^4.0.0",
+    "chroma-js": "^2.0.4",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.0.0",
     "ngx-pagination": "^4.0.0",
